--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Simone Green Professional Portfolio
 description: Welcome to my professional portfolio! Please use this site to keep up with me.
