--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-cayman
-title: Simone Green Professional Portfolio
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have onetheme: jekyll-theme-cayman
+#title: Simone Green Professional Portfolio
 description: Welcome to my professional portfolio! Please use this site to keep up with me.
