--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-theme: jekyll-theme-cayman
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have onetheme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: Simone Green Professional Portfolio
 description: Welcome to my professional portfolio! Please use this site to keep up with me.
